# Vulkan-Platform

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: glsl_shader_target.cmake  slang_shader_target.cmake
shaders/: gradient.comp  input_structures.glsl  mesh.frag  mesh.vert  pbr.frag  pbr.vert  triangle.frag  triangle.vert
shaders/glsl/: gradient.comp  input_structures.glsl  mesh.frag  mesh.vert  pbr.frag  pbr.vert  point_light_fragment.frag  point_light_vertex.vert  triangle.frag  triangle.vert  tut_fragment.frag  tut_vertex.vert
shaders/slang/: ParticleCompute.slang  ParticleDraw.slang  SpriteParticleCompute.slang  SpriteParticleComputeAOS.slang  SpriteParticleComputeSOA.slang  SpriteParticleDraw2D.slang  SpriteParticleDraw3D.slang  SpriteParticleDrawAOS2D.slang  SpriteParticleDrawSOA2D.slang  SpriteParticleDrawSOA3D.slang  particle2D.slang  particlebuffer.slang  triangle.slang
vulkan-1.3/: CMakeLists.txt  config.h.in
vulkan-1.3/include/: AllocatedBuffer.hpp  AllocatedTexture.hpp  Descriptors.hpp  FrameData.hpp  GlobalDef.hpp  QueueScheduler.hpp  Tools.hpp  Util.hpp  VulkanEngine.hpp  config.h
vulkan-1.3/include/builder/: BarrierBuilder.hpp  ComputePipelineBuilder.hpp  GraphicPipelineBuilder.hpp  MultiQueueDeviceBuilder.hpp  NodeManagerBuiler.hpp  QueueSchedulerBuilder.hpp  SceneNodeBuilder.hpp
vulkan-1.3/include/bvh/: Bounds3.hpp
vulkan-1.3/include/compute/: ComputePipeline.hpp  Compute_EffectBase.hpp  Compute_ImageAttachment.hpp  Compute_Material.hpp  Compute_ParticleSys.hpp
vulkan-1.3/include/frame/: FrameData.hpp  SwapChainImageData.hpp
vulkan-1.3/include/interactive/: Keyboard_Controller.hpp
vulkan-1.3/include/material/: GLTFMetallic_Roughness.hpp  GLTFPBR_Material.hpp  Graphic_EffectBase.hpp  MaterialPipeline.hpp
vulkan-1.3/include/mesh/: MeshAsset.hpp  MeshBuffers.hpp  MeshLoader.hpp
vulkan-1.3/include/nodes/: BaseNode.hpp  CameraNode.hpp  MeshNode.hpp  NodeManager.hpp  ScenesManager.hpp
vulkan-1.3/include/nodes/camera/: CameraNode.hpp
vulkan-1.3/include/nodes/core/: BaseNode.hpp
vulkan-1.3/include/nodes/mesh/: MeshNode.hpp
vulkan-1.3/include/nodes/scene/: NodeManager.hpp  SceneNode.hpp
vulkan-1.3/include/particle/: ParticleDataBuffer.hpp  ParticleDefTraits.hpp  ParticleLayoutPolicy.hpp  ParticleSys2D.hpp  PointSpriteParticleSystemBase.hpp
vulkan-1.3/include/particle/sprite/: PointSpriteParticleSystem2D.hpp  PointSpriteParticleSystem3D.hpp
vulkan-1.3/include/pipeline/: ComputePipeline.hpp  ComputePipelinePacked.hpp  GraphicPipeline.hpp  GraphicPipelineBuilder.hpp  GraphicPipelinePacked.hpp  MaterialPipeline.hpp  PipelineBasic.hpp
vulkan-1.3/include/scene/: Scene.hpp  ScenesManager.hpp
vulkan-1.3/include/task/: AsyncSubmitHandler.hpp  LogicWorker.hpp
vulkan-1.3/src/: AllocatedBuffer.cpp  AllocatedTexture.cpp  AsyncSubmitHandler.cpp  BarrierBuilder.cpp  BaseNodeImpl.cpp  Bounds3.cpp  CameraNode.cpp  ComputePipeline.cpp  ComputePipelineBuilder.cpp  ComputePipelinePacked.cpp  Compute_ParticleSys.cpp  Descriptors.cpp  FrameData.cpp  GLTFMetallic_Roughness.cpp  GlobalDef.cpp  GraphicPipeline.cpp  GraphicPipelineBuilder.cpp  GraphicPipelinePacked.cpp  Keyboard_Controller.cpp  LogicWorker.cpp  MaterialPipeline.cpp  MeshBuffers.cpp  MeshLoader.cpp  MultiQueueDeviceBuilder.cpp  NodeManager.cpp  NodeManagerBuiler.cpp  ParticleLayoutPolicy.cpp  ParticleSysDataBuffer.cpp  QueueScheduler.cpp  Scene.cpp  SceneNode.cpp  SceneNodeBuilder.cpp  ScenesManager.cpp  SwapChainImageData.cpp  VulkanEngine.cpp  Window.cpp  main.cpp
vulkan-adapt/: CMakeLists.txt
vulkan-adapt/include/: Buffer.hpp  Camera.hpp  Descriptors.hpp  Device.hpp  GlobalDef.hpp  Keyboard_Controller.hpp  Model.hpp  Pipeline.hpp  Render.hpp  SwapChain.hpp  Tools.hpp  VulkanTut.hpp  Window.hpp
vulkan-adapt/include/system/: TutRenderSystem.hpp
vulkan-adapt/shaders/: tut_vertex.vert
vulkan-adapt/src/: Buffer.cpp  Camera.cpp  Descriptors.cpp  Device.cpp  Keyboard_Controller.cpp  Model.cpp  Pipeline.cpp  PointLightSystem.cpp  Render.cpp  SwapChain.cpp  TutRenderSystem.cpp  Window.cpp  main.cpp
vulkan-tut/vulkan-adapt/: CMakeLists.txt
vulkan-tut/vulkan-adapt/include/: GameObject.hpp
vulkan-tut/vulkan-adapt/include/system/: PointLightSystem.hpp
vulkan-tut/vulkan-adapt/src/: Device.cpp  GameObject.cpp  Model.cpp  VulkanTut.cpp
